samples/_failures_safe/1761257526_d448a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07c297f5.c: In function ‘main’:
./samples/SAFE/__tmp_07c297f5.c:164:12: error: missing terminating " character
  164 |     printf("Commands: start
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_07c297f5.c:164:5: error: expected expression at end of input
  164 |     printf("Commands: start
      |     ^~~~~~
./samples/SAFE/__tmp_07c297f5.c:164:5: error: expected declaration or statement at end of input
